@@ -56,6 +56,7 @@ CONFIG_RTAI_DOC_DOX_FALSE = @CONFIG_RTAI_DOC_DOX_FALSE@
 CONFIG_RTAI_DOC_DOX_TRUE = @CONFIG_RTAI_DOC_DOX_TRUE@
 CONFIG_RTAI_HW_FPU_FALSE = @CONFIG_RTAI_HW_FPU_FALSE@
 CONFIG_RTAI_HW_FPU_TRUE = @CONFIG_RTAI_HW_FPU_TRUE@
+CONFIG_RTAI_LINUXDIR = @CONFIG_RTAI_LINUXDIR@
 CONFIG_RTAI_MAINT_FALSE = @CONFIG_RTAI_MAINT_FALSE@
 CONFIG_RTAI_MAINT_GCH_FALSE = @CONFIG_RTAI_MAINT_GCH_FALSE@
 CONFIG_RTAI_MAINT_GCH_TRUE = @CONFIG_RTAI_MAINT_GCH_TRUE@
